--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
 <html>
 
 <head>
+	<title>Home : Isaac Rezey</title>
+	<link rel="stylesheet" href="styles/stdStyle.css" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&display=swap" />
 </head>
 
 <body>
-	<h1>File Start</h1>
-	<p>Paragraph</p>
+
+	<div class="main">
+
+		<div class="equalHorzDistrib">
+			<div>
+				<img src="images/headshot.png" />
+			</div>
+
+			<div>
+				<h1>
+					about me
+				</h1>
+
+				<div class="divider"></div>
+				
+				<p>
+					I have a longtime interest in bio-work and software development.  This has ranged from labwork to web design.
+				</p>
+				<p>
+					Check out my work and find me using the following:
+				</p>
+
+				<div class="sideBySide">
+					<div>
+						<a href="https://www.google.com" target="_blank">
+							<img class="small" src="images/contact/email.png" />
+						</a>
+					</div>
+
+					<div>
+						<a href="https://github.com/isaacrez" target="_blank">
+							<img class="small" src="images/contact/github.png" />
+						</a>
+					</div>
+
+					<div>
+						<a href="https://www.linkedin.com/in/isaac-rezey" target="_blank">
+							<img class="small" src="images/contact/linkedIn.png" />
+						</a>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="selectionBar">
+			<div>
+				<a href="index.html">
+					Home
+				</a>
+			</div>
+			<div>
+				<a href="pages/experience.html">
+						Skills
+				</a>
+			</div>
+			<div>
+				<a href="pages/projects.html">
+					Projects
+				</a>
+			</div>
+			<div>
+				<a href="pages/pastWork.html">
+					Past Work
+				</a>
+			</div>
+			<div>
+				<a href="pages/volunteerWork.html">
+					Volunteer
+				</a>
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
