Added Binary Grapher into webportfolio

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,7 +12,7 @@
 
 		<div class="equalHorzDistrib">
 			<div>
-				<img src="../images/headshot.png" />
+				<img class="icon" src="../images/headshot.png" />
 			</div>
 
 			<div>
@@ -102,7 +102,7 @@
 
 		<div class="sideBySide">
 			
-			<a>
+			<a href="binarySeparationsGrapher.html">
 				<img class="icon" src="../images/projects/binaryGraphSnip.png" />
 			</a>
 
