Updated selection bar

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -11,7 +11,7 @@
 
 		<div class="equalHorzDistrib">
 			<div>
-				<img src="../images/headshot.png" />
+				<img class="icon" src="../images/headshot.png" />
 			</div>
 
 			<div>
