--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<div class="equalHorzDistrib">
 			<div>
-				<img src="images/headshot.png" />
+				<img class="icon" src="images/headshot.png" />
 			</div>
 
 			<div>
